--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Ann32Hai09
 spring.mvc.hiddenmethod.filter.enabled=true
+mybatis.mapper-locations=classpath*:/mapper/*.xml
